ffmpegcodecmap: don't create dummy codec data for FLAC decoder

Since then it just errors out because it's too small, as it
wants the flac headers as codec data if there is codec data.

https://bugzilla.gnome.org/show_bug.cgi?id=589361