ext/ffmpeg/gstffmpegcodecmap.c
@@ -2387,7 +2387,8 @@ gst_ffmpeg_caps_with_codecid (enum CodecID codec_id,
     }
 
     GST_DEBUG ("have codec data of size %d", size);
-  } else if (context->extradata == NULL && codec_id != CODEC_ID_AAC_LATM) {
+  } else if (context->extradata == NULL && codec_id != CODEC_ID_AAC_LATM &&
+      codec_id != CODEC_ID_FLAC) {
     /* no extradata, alloc dummy with 0 sized, some codecs insist on reading
      * extradata anyway which makes then segfault. */
     context->extradata =
